[s390] Prevent restoring incorrect bcp and locals in interpreter and avoid incorrect size of partialSubtypeCheckNode in C2

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b22
    • s390x

        TestInterfaceMethodSelection has shown a bug in the template interpreter on s390. Restore functions for locals (R12 = Z_tmp_3) and bcp (R13 = Z_tmp_4) are used without having saved the correct values.
        In addition, C2 currently uses a constant size for partialSubtypeCheckNode which uses load_const_optimized with variable size.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: